<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_sell" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_me" />

</menu>